--- a/section02_Project001/index.html
+++ b/section02_Project001/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 1 TypeScript</title>
-  <script src="app.js" defer > </script>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Understanding TypeScript</title>
+  <script src="app.js" defer></script>
 </head>
 <body>
   
